--- a/app_server/views/arrivals.pug
+++ b/app_server/views/arrivals.pug
@@ -24,14 +24,14 @@ block content
                                     th Callsign
                                     th Departure
                                     th Arrival
-                                    th Logon Time
+                                    //- th Logon Time
                             tbody
                                 each client in clients
                                     tr
                                         td #{client.callsign}
                                         td #{client.planned_depairport}
                                         td #{client.planned_destairport}
-                                        td #{client.time_logon}
+                                        //- td #{client.time_logon}
                     .col
                         h1.text-center Current Weather at #{selectedAirport}
                         h3.text Summary:
